--- a/styles.css
+++ b/styles.css
@@ -92,12 +92,11 @@
 #skills-section {
   display: flex;
   flex-direction: column;
-  text-align: center;
   gap: 50px;
 }
 #skills-section .skill-container {
   display: flex;
-  align-items: center;
+  align-items: start;
   gap: 1rem;
 }
 #skills-section .skill-container img {
@@ -123,10 +122,12 @@
     flex-direction: row;
     align-items: baseline;
     justify-content: space-between;
+    text-align: center;
   }
   #skills-section .skill-container {
     display: flex;
     flex-direction: column;
+    align-items: center;
     width: 100%;
   }
 }
